--- a/assets/css/kratos.css
+++ b/assets/css/kratos.css
@@ -136,6 +136,22 @@ button:focus {
 	padding: 23px 0;
 }
 
+.k-main.color {
+	padding-top: 103px;
+}
+
+@media only screen and (max-width: 992px) {
+	.k-main.color {
+		padding-top: 92px;
+	}
+}
+
+@media only screen and (max-width: 768px) {
+	.k-main.color {
+		padding-top: 83px;
+	}
+}
+
 /*--------------------------------------------------------------
 2. 导航
 --------------------------------------------------------------*/
@@ -733,12 +749,23 @@ button:focus {
 	margin-bottom: -3px;
 }
 
-.k-main .details .article .content ul {
+.k-main .details .article .content ul,
+.k-main .details .article .content ol {
+	margin: 0 0 16px;
 	padding-left: 16px;
-	list-style-type: square;
 }
 
-.k-main .details .article .content li {
+.k-main .details .article .content ol > li {
+	margin-bottom: 6px;
+	padding-left: 2px;
+	list-style: decimal;
+	line-height: 22px;
+}
+
+.k-main .details .article .content ul > li {
+	margin-bottom: 6px;
+	padding-left: 2px;
+	list-style: circle;
 	line-height: 22px;
 }
 
@@ -784,16 +811,6 @@ button:focus {
 	white-space: nowrap;
 	font-size: 10px;
 	line-height: 1.5;
-}
-
-.k-main .details .article .content li {
-	margin-bottom: 6px;
-	list-style: circle;
-}
-
-.k-main .details .article .content ol,
-.k-main .details .article .content ul {
-	margin: 0;
 }
 
 .k-main .details .article .content pre code {
@@ -1517,12 +1534,12 @@ button:focus {
 
 .k-main .sidebar .w-tags .item a {
 	display: inline-block;
-	list-style: none;
 	margin: 0 2px 4px 0;
 	padding: 2px 0;
 	width: 140px;
 	border: 1px solid #eeeeee;
 	color: #333;
+	list-style: none;
 	text-align: center;
 	text-transform: uppercase;
 	font-size: 14px;
@@ -1530,18 +1547,18 @@ button:focus {
 
 .k-main .sidebar .widget_links ul li {
 	display: inline-block;
-	list-style: none;
 	margin: 0 2px 4px 0;
 	padding: 2px 0;
 	width: 140px;
 	color: #333;
+	list-style: none;
 	font-size: 15px;
 }
 
 .k-main .sidebar .widget_links ul li img {
+	margin-top: -3px;
 	width: 25px;
 	height: 25px;
-	margin-top: -3px;
 	border-radius: 50%;
 }
 
@@ -1587,9 +1604,9 @@ button:focus {
 }
 
 .k-main .sidebar tbody tr {
-	font-family: arial;
 	font-weight: 400;
 	font-size: 14px;
+	font-family: arial;
 }
 
 .k-main .sidebar tbody a {
